feat(frontend/dashboard): major dashboard UI and metrics overhaul
Dashboard HTML:

Replaced placeholder dashboard content with a metrics grid showing four key job search statistics:
Total Jobs Assessed
Total Jobs Feasible
Total Jobs Applied
Feasible Jobs Not Applied
Added interactive controls for filtering by days and refreshing metrics.
Each metric card is clickable, linking to the history page with appropriate filters.
Dashboard CSS:

Added comprehensive styles for the dashboard metrics grid, cards, controls, loading/error states, and responsive design.
Metric cards feature gradient backgrounds, hover effects, and improved layout for both desktop and mobile.
Dashboard JS:

Implemented API calls to fetch recent jobs and job skills, calculate metrics, and update the dashboard display.
Added logic to compute "decent leads" based on qualification match fractions.
Integrated loading and error states for better UX.
Metric cards now link to filtered history views (all, feasible, applied, feasible-not-applied).
Refresh and days filter controls are fully functional.
History JS:

Enhanced URL parameter parsing to support new dashboard-driven filters (days, decentOnly, hideApplied, showApplied).
Updated filtering logic to allow direct navigation from dashboard metric cards to corresponding history views.
These changes deliver a fully interactive dashboard page for the Firefox extension, providing users with actionable job search metrics and seamless navigation to detailed job history views. The update significantly improves usability, visual appeal, and workflow efficiency for job tracking.

--- a/frontend/companion-firefox/dashboard/dashboard.html
+++ b/frontend/companion-firefox/dashboard/dashboard.html
@@ -23,11 +23,37 @@
   <div class="container">
     <header>
       <h1>Dashboard</h1>
+      <div class="controls">
+        <label for="days-back">Days:</label>
+        <input id="days-back" type="number" min="1" value="5" />
+        <button id="refresh-btn" class="action-btn">Refresh</button>
+      </div>
     </header>
     <main id="dashboard-container">
-      <!-- Dashboard content will go here -->
-      <p>If you can see the navigation bar above, then the issue is with the JavaScript navigation generation.</p>
-      <p>If you can't see the navigation bar, then the issue is with the CSS or basic HTML structure.</p>
+      <div id="metrics-grid">
+        <div class="metric-card clickable" id="card-assessed">
+          <div class="metric-title">Total Jobs Assessed</div>
+          <div class="metric-value" id="total-assessed">-</div>
+          <div class="metric-description">Jobs with completed assessments</div>
+        </div>
+        <div class="metric-card clickable" id="card-feasible">
+          <div class="metric-title">Total Jobs Feasible</div>
+          <div class="metric-value" id="total-feasible">-</div>
+          <div class="metric-description">Jobs matching qualification criteria</div>
+        </div>
+        <div class="metric-card clickable" id="card-applied">
+          <div class="metric-title">Total Jobs Applied</div>
+          <div class="metric-value" id="total-applied">-</div>
+          <div class="metric-description">Jobs marked as applied</div>
+        </div>
+        <div class="metric-card clickable" id="card-feasible-not-applied">
+          <div class="metric-title">Feasible Jobs Not Applied</div>
+          <div class="metric-value" id="total-feasible-not-applied">-</div>
+          <div class="metric-description">Good opportunities not yet applied to</div>
+        </div>
+      </div>
+      <div id="loading-state" class="loading-message">Loading metrics...</div>
+      <div id="error-state" class="error-message" style="display: none;"></div>
     </main>
   </div>
   <script src="../shared/navigation.js"></script>
